# ff_assignment_portal

./: .gitignore  README.md  license.txt  package.json  pyproject.toml
.github/workflows/: ci.yml
assignments-portal/: index.html  package.json  vite.config.js
assignments-portal/src/: App.vue  router.js  utils.js
assignments-portal/src/components/: AssignmentArea.vue
assignments-portal/src/components/sql/: SQLProblem.vue
assignments-portal/src/pages/: Day1.vue  Day2.vue  Day3.vue  Day4.vue  FrameworkPortal.vue  SQLPortal.vue
ff_assignment_portal/: api.py  hooks.py  modules.txt  patches.txt  test.db  utils.py
ff_assignment_portal/ff_assignment_portal/doctype/assignment_portal_settings/: assignment_portal_settings.js  assignment_portal_settings.json  assignment_portal_settings.py  test_assignment_portal_settings.py
ff_assignment_portal/ff_assignment_portal/doctype/ff_assignment_submission/: ff_assignment_submission.js  ff_assignment_submission.json  ff_assignment_submission.py  test_ff_assignment_submission.py
ff_assignment_portal/ff_assignment_portal/report/ff_assignment_summary_by_student/: ff_assignment_summary_by_student.js  ff_assignment_summary_by_student.json  ff_assignment_summary_by_student.py
ff_assignment_portal/public/assignments-portal/: index.html
ff_assignment_portal/sql_portal/doctype/sql_problem/: sql_problem.js  sql_problem.json  sql_problem.py  test_sql_problem.py
ff_assignment_portal/sql_portal/doctype/sql_problem_set/: sql_problem_set.js  sql_problem_set.json  sql_problem_set.py  test_sql_problem_set.py
(+11 files in other folders)
